fixes on veryfi controller, change title tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
   <script type="module" src="./index.js" defer></script>
 
-  <title>Lens For Browser Demo</title>
+  <title>Superlikers Lens</title>
 </head>
 <body class="dark absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
