change canvas width

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
   <script type="module" src="./index.js" defer></script>
 
   <title>Superlikers Lens</title>
+
+  <style>
+    #veryfi-box-ref, #veryfi-crop-img-ref {
+      width: 100%;
+    }
+  </style>
+
 </head>
 <body class="dark absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
