fix video container styles

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
     #veryfi-box-ref, #veryfi-crop-img-ref {
       width: 100%;
     }
+
+    #veryfi-container {
+      height: 100%;
+      width: 100%;
+    }
+
+    #veryfi-video-ref {
+      height: 100vh;
+    }
   </style>
 
 </head>
