--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
   <link rel="stylesheet" href="output.css">
@@ -18,19 +18,28 @@
     }
 
     #veryfi-container {
-      height: 100%;
-      width: 100%;
+      height: 100vh;
+      width: 100vw;
+    }
+
+    #preview {
+      flex-direction: column;
+      overflow-y: scroll;
+      height: 100vh;
+      max-height: 100vh;
+      padding: 0 1rem 8rem;
     }
 
     #veryfi-video-ref {
-      height: 100vh;
+      height: 100%;
+      max-width: fit-content;
     }
   </style>
 
 </head>
 <body class="dark absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
-  <div id="preview" class="absolute top-5 flex flex-col max-h-[60vh] max-w-[300px]"></div>
+  <div id="preview" class="absolute top-5 flex flex-col"></div>
   <div id="veryfi-container" class="h-[100vh] flex items-center justify-center overflow-hidden">
     <button class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50">
     </button>
