add styles to video and container elements

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,14 @@
   <title>Superlikers Lens</title>
 
   <style>
-    #veryfi-box-ref, #veryfi-crop-img-ref {
+    /* #veryfi-box-ref, #veryfi-crop-img-ref {
       width: 100%;
-    }
+    } */
 
     #veryfi-container {
       height: 100vh;
       width: 100vw;
+      position: relative;
     }
 
     #preview {
@@ -31,18 +32,38 @@
     }
 
     #veryfi-video-ref {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
       height: 100%;
-      max-width: fit-content;
+      object-fit: cover;
     }
   </style>
 
 </head>
-<body class="dark absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
+<body class="absolute bg-[#171C3A] flex flex-col h-full w-full justify-center items-center overflow-hidden">
+  <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
+  <div id="preview" class="absolute top-5 flex flex-col max-h-[60vh] max-w-[300px]">
+  </div>
+  <div id="veryfi-container" class="h-[100vh] flex items-center justify-center overflow-hidden">
+      <button
+              class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50"
+              onclick="captureWasm()">
+  
+      </button>
+  </div>
+  </body>
+
+<!-- <body class="dark absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
   <div id="preview" class="absolute top-5 flex flex-col"></div>
-  <div id="veryfi-container" class="h-[100vh] flex items-center justify-center overflow-hidden">
+  <div id="veryfi-container" class="flex items-center justify-center overflow-hidden">
     <button class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50">
     </button>
   </div>
-</body>
+</body> -->
 </html>
+
+
+<!-- npx local-ssl-proxy --key 192.168.68.52-key.pem --cert 192.168.68.52.pem --source 3001 --target 5001 -->
