--- a/public/index.html
+++ b/public/index.html
@@ -5,65 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
-  <link rel="stylesheet" href="output.css">
+  <link rel="stylesheet" href="./css/output.css">
+  <link rel="stylesheet" href="./css/index.css">
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
-  <script type="module" src="./index.js" defer></script>
+  <script type="module" src="./scripts/index.js" defer></script>
 
   <title>Superlikers Lens</title>
-
-  <style>
-    /* #veryfi-box-ref, #veryfi-crop-img-ref {
-      width: 100%;
-    } */
-
-    #veryfi-container {
-      height: 100vh;
-      width: 100vw;
-      position: relative;
-    }
-
-    #preview {
-      flex-direction: column;
-      overflow-y: scroll;
-      height: 100vh;
-      max-height: 100vh;
-      padding: 0 1rem 8rem;
-    }
-
-    #veryfi-video-ref {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
-
 </head>
-<body class="absolute bg-[#171C3A] flex flex-col h-full w-full justify-center items-center overflow-hidden">
-  <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
-  <div id="preview" class="absolute top-5 flex flex-col max-h-[60vh] max-w-[300px]">
-  </div>
-  <div id="veryfi-container" class="h-[100vh] flex items-center justify-center overflow-hidden">
-      <button
-              class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50"
-              onclick="captureWasm()">
-  
-      </button>
-  </div>
-  </body>
-
-<!-- <body class="dark absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
+<body class="absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
   <div id="preview" class="absolute top-5 flex flex-col"></div>
   <div id="veryfi-container" class="flex items-center justify-center overflow-hidden">
     <button class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50">
     </button>
   </div>
-</body> -->
+</body>
 </html>
-
-
-<!-- npx local-ssl-proxy --key 192.168.68.52-key.pem --cert 192.168.68.52.pem --source 3001 --target 5001 -->
