remove custom styles

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <title>Superlikers Lens</title>
 </head>
-<body class="absolute bg-[#171C3A] flex flex-co h-full w-full justify-center items-center overflow-hidden">
+<body class="absolute bg-[#171C3A] flex flex-col h-full w-full justify-center items-center overflow-hidden">
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
   <div id="preview" class="absolute top-5 flex flex-col"></div>
   <div id="veryfi-container" class="flex items-center justify-center overflow-hidden">
