add loading before shows camera, remve ask for camera function

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <title>Superlikers Lens</title>
 </head>
 <body class="absolute bg-[#171C3A] flex flex-col h-full w-full justify-center items-center overflow-hidden">
+  <p class="text-5xl text-white">Cargando...</p>
   <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
   <div id="preview" class="absolute top-5 flex flex-col"></div>
   <div id="veryfi-container" class="flex items-center justify-center overflow-hidden">
