update button labels for ticket upload functionality

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       id="take_photo"
       class="bg-[#FFC107] text-black font-semibold rounded-md py-2 px-6 shadow-md hover:bg-yellow-500 hover:shadow-lg transition duration-200"
     >
-      Tomar Foto
+      Subir Ticket
     </button>
     
     <!-- Botón: Subir Archivo -->
@@ -31,7 +31,7 @@
         id="upload_file"
         class="bg-[#03A9F4] text-white font-semibold rounded-md py-2 px-6 shadow-md hover:bg-blue-500 hover:shadow-lg transition duration-200"
       >
-        Subir Archivo
+        Subir Ticket Digital
       </button>
       <p id="file_name" class="text-white"></p>
       <input type="file" id="file_input" class="hidden">
