refactor button selection for image capture functionality and enhance HTML structure

--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,12 @@
     </div>
   </div>
   
-  <div id="content" class="hidden">
+  <div id="content" class="hidden flex-col h-full w-full justify-center items-center overflow-hidden">
     <p id="loading" class="text-5xl text-white">Cargando...</p>
     <div id="status" class="text-center text-white font-bold font-mono text-[60px]"></div>
     <div id="preview" class="absolute top-5 flex flex-col"></div>
     <div id="veryfi-container" class="flex items-center justify-center overflow-hidden">
-      <button class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50">
+      <button id="upload-photo" class="absolute bottom-8 sm:bottom-16 left-0 right-0 ml-auto mr-auto border-4 border-white-600 hover:bg-white/50 rounded-full w-16 h-16 z-50">
       </button>
     </div>
   </div>
